# RedTeam

./: .env.example  .gitignore  AGENTS.md  README.md  implementation.md  pyproject.toml  render.yaml  requirements.txt
UI/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
UI/src/app/: globals.css  layout.tsx  page.tsx
UI/src/app/api/audit/: route.ts
UI/src/components/: AgentCard.tsx  AgentFeed.tsx  CodeEditor.tsx  Header.tsx  SecurityReport.tsx  Timeline.tsx  index.ts
UI/src/hooks/: index.ts  useAudit.ts  useTypewriter.ts
UI/src/lib/: constants.ts  types.ts
docs/: DEMO.md  EVALUATION.md
examples/vuln_app/: README.md  app.py
scripts/: demo.sh  stream_audit.py
src/audit/: cli.py  config.py  server.py
src/audit/agents/: __init__.py  arbiter.py  base.py  blue.py  prompts.py  red.py  reporter.py
src/audit/contracts/: __init__.py  models.py
src/audit/flows/: __init__.py  baseline.py  fix.py  reattack.py  report.py  run.py  scan.py  scorecard.py  utils.py  verify.py
src/audit/tools/: files.py  heuristic_patches.py  heuristics.py  jsonio.py  linters.py  openai_client.py  patch.py  run_state.py
tests/: test_vuln_app.py
